kubernetes/apps/observability/grafana/app/networkpolicy-grafana-operator.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-operator-egress-to-grafana
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: grafana-operator
  egress:
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:app.kubernetes.io/name: coredns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toServices:
        - k8sService:
            namespace: observability
            serviceName: grafana-service
    - toEndpoints:
        - matchLabels:
            app: grafana
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana-allow-operator-ingress
  namespace: observability
spec:
  endpointSelector:
    matchLabels:
      app: grafana
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: grafana-operator
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
